# TemplateArray_m8

./: CMakeLists.txt
src/: main.cpp  templateArray.cpp  templateArray.h
